# plymouth-theme

./: README.md  meson.build  meson_options.txt  source-install.md
debian/: changelog  control  copyright  plymouth-theme-kubuntu-bgrt.install  plymouth-theme-kubuntu-bgrt.postinst  plymouth-theme-kubuntu-bgrt.postrm  plymouth-theme-ubuntu-bgrt.install  plymouth-theme-ubuntu-bgrt.postinst  plymouth-theme-ubuntu-bgrt.postrm  plymouth-theme-ubuntu-budgie-bgrt.install  plymouth-theme-ubuntu-budgie-bgrt.postinst  plymouth-theme-ubuntu-budgie-bgrt.postrm  plymouth-theme-ubuntu-mate-bgrt.install  plymouth-theme-ubuntu-mate-bgrt.postinst  plymouth-theme-ubuntu-mate-bgrt.postrm  plymouth-theme-xubuntu-bgrt.install  plymouth-theme-xubuntu-bgrt.postinst  plymouth-theme-xubuntu-bgrt.postrm  rules
plymouth-theme/: meson.build
plymouth-theme/src/: bgrt.plymouth.in  meson.build
